--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,7 @@
 # Input the path information for Conda and the workflow directories
 conda_dir: "/path/to/miniconda3/bin"
+medaka_dir: "/path/to/miniconda3/envs/medaka/bin"
+quast_dir: "/path/to/miniconda3/envs/quast/bin"
 workflow_dir: "/path/to/nanopore-workflow"
 
 # Input sample names to be analyzed.  The folder for each sample should be in the same directory as this file.
