--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,9 @@
 # Input the path information for Conda and the workflow directories
-conda_dir: "/path/to/conda/bin"
+workflow_dir: "/path/to/nanopore-workflow"
+conda_dir: "/path/to/conda/envs/nanopore-workflow/bin"
 medaka_dir: "/path/to/conda/envs/medaka/bin"
 quast_dir: "/path/to/conda/envs/quast/bin"
-workflow_dir: "/path/to/nanopore-workflow"
+R_env_dir: "/path/to/conda/envs/R_env/bin"
 
 # Input sample names to be analyzed.  The folder for each sample should be in the same directory as this file.
 samples: ['Sample_1', 'Sample_2']
