--- a/env/medaka_env.yml
+++ b/env/medaka_env.yml
@@ -4,131 +4,131 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - _tflow_select=2.3.0=mkl
-  - absl-py=0.13.0=pyhd8ed1ab_0
-  - aiohttp=3.7.4.post0=py38h497a2fe_0
-  - astor=0.8.1=pyh9f0ad1d_0
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - async-timeout=3.0.1=py_1000
-  - attrs=21.2.0=pyhd8ed1ab_0
-  - bcftools=1.12=h45bccc9_1
-  - biopython=1.79=py38h497a2fe_0
-  - blinker=1.4=py_1
-  - brotlipy=0.7.0=py38h497a2fe_1001
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.1=h7f98852_1
-  - ca-certificates=2021.5.30=ha878542_0
-  - cachetools=4.2.2=pyhd8ed1ab_0
-  - certifi=2021.5.30=py38h578d9bd_0
-  - cffi=1.14.5=py38ha65f79e_0
-  - chardet=4.0.0=py38h578d9bd_1
-  - click=8.0.1=py38h578d9bd_0
-  - cryptography=3.4.7=py38ha5dfef3_0
-  - dataclasses=0.8=pyhc8e2a94_1
-  - decorator=5.0.9=pyhd8ed1ab_0
-  - gast=0.3.3=py_0
-  - google-auth=1.30.2=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - google-pasta=0.2.0=pyh8c360ce_0
-  - grpcio=1.38.0=py38hdd6454d_0
-  - gsl=2.6=he838d99_2
-  - h5py=2.10.0=nompi_py38h9915d05_106
-  - hdf5=1.10.6=nompi_h6a2412b_1114
-  - htslib=1.12=h9093b5e_1
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=4.5.0=py38h578d9bd_0
-  - intervaltree=3.0.2=py_0
-  - isa-l=2.30.0=ha770c72_4
-  - k8=0.2.5=h9a82719_1
-  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
-  - krb5=1.19.1=hcc1bbae_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=9_openblas
-  - libcblas=3.9.0=9_openblas
-  - libcurl=7.77.0=h2574ce0_0
-  - libdeflate=1.7=h7f98852_5
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=9.3.0=h2828fa1_19
-  - libgfortran-ng=9.3.0=hff62375_19
-  - libgfortran5=9.3.0=hff62375_19
-  - libgomp=9.3.0=h2828fa1_19
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=9_openblas
-  - libnghttp2=1.43.0=h812cca2_0
-  - libopenblas=0.3.15=pthreads_h8fe5266_1
-  - libprotobuf=3.17.2=h780b84a_0
-  - libssh2=1.9.0=ha56f1ee_6
-  - libstdcxx-ng=9.3.0=h6de172a_19
-  - lz4-c=1.9.3=h9c3ff4c_0
-  - mappy=2.17=py38h390ddb8_3
-  - markdown=3.3.4=pyhd8ed1ab_0
-  - medaka=1.4.1=py38h130def0_0
-  - minimap2=2.20=h5bf99c6_0
-  - multidict=5.1.0=py38h497a2fe_1
-  - ncurses=6.2=h58526e2_4
-  - networkx=2.5=py_0
-  - numpy=1.19.5=py38h18fd61f_1
-  - oauthlib=3.1.1=pyhd8ed1ab_0
-  - ont-fast5-api=3.3.0=py_0
-  - openssl=1.1.1k=h7f98852_0
-  - opt_einsum=3.3.0=pyhd8ed1ab_1
-  - packaging=20.9=pyh44b312d_0
-  - parasail-python=1.2.4=py38h8e3bb3f_1
-  - perl=5.32.1=0_h7f98852_perl5
-  - pigz=2.6=h27826a3_0
-  - pip=21.1.2=pyhd8ed1ab_0
-  - progressbar33=2.4=py_0
-  - protobuf=3.17.2=py38h709712a_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyfaidx=0.5.9.5=pyh3252c3a_0
-  - pyjwt=2.1.0=pyhd8ed1ab_0
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pysam=0.16.0.1=py38hf7546f9_3
-  - pysocks=1.7.1=py38h578d9bd_3
-  - pyspoa=0.0.3=py38hc37a69a_2
-  - python=3.8.10=h49503c6_1_cpython
-  - python-edlib=1.3.8.post2=py38h8c62d01_1
-  - python-isal=0.10.0=py38h497a2fe_0
-  - python_abi=3.8=1_cp38
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - racon=1.4.20=h9a82719_1
-  - readline=8.1=h46c0cb4_0
-  - requests=2.25.1=pyhd3deb0d_0
-  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
-  - rsa=4.7.2=pyh44b312d_0
-  - samtools=1.12=h9aed4be_1
-  - scipy=1.6.3=py38h7b17777_0
-  - setuptools=49.6.0=py38h578d9bd_3
-  - six=1.16.0=pyh6c4a22f_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - sqlite=3.35.5=h74cdb3f_0
-  - tar=1.34=ha1f6473_0
-  - tensorboard=2.5.0=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.0=py38h2b97feb_0
-  - tensorboard-plugin-wit=1.8.0=pyh44b312d_0
-  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
-  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
-  - tensorflow-estimator=2.5.0=pyh81a9013_1
-  - termcolor=1.1.0=py_2
-  - tk=8.6.10=h21135ba_1
-  - typing-extensions=3.10.0.0=hd8ed1ab_0
-  - typing_extensions=3.10.0.0=pyha770c72_0
-  - urllib3=1.26.5=pyhd8ed1ab_0
-  - werkzeug=2.0.1=pyhd8ed1ab_0
-  - whatshap=1.1=py38h8c62d01_1
-  - wheel=0.36.2=pyhd3deb0d_0
-  - wrapt=1.12.1=py38h497a2fe_3
-  - xopen=1.1.0=py38h578d9bd_3
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - yarl=1.6.3=py38h497a2fe_1
-  - zipp=3.4.1=pyhd8ed1ab_0
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.5.0=ha95c52a_0
+  - attrs==21.2.0=pyhd8ed1ab_0
+  - libprotobuf==3.17.2=h780b84a_0
+  - bzip2==1.0.8=h7f98852_4
+  - urllib3==1.26.5=pyhd8ed1ab_0
+  - openssl==1.1.1k=h7f98852_0
+  - isa-l==2.30.0=ha770c72_4
+  - pigz==2.6=h27826a3_0
+  - xz==5.2.5=h516909a_1
+  - pyparsing==2.4.7=pyh9f0ad1d_0
+  - yarl==1.6.3=py38h497a2fe_1
+  - libev==4.33=h516909a_1
+  - chardet==4.0.0=py38h578d9bd_1
+  - _tflow_select==2.3.0=mkl
+  - pysocks==1.7.1=py38h578d9bd_3
+  - protobuf==3.17.2=py38h709712a_0
+  - pycparser==2.20=pyh9f0ad1d_2
+  - hdf5==1.10.6=nompi_h6a2412b_1114
+  - cryptography==3.4.7=py38ha5dfef3_0
+  - libedit==3.1.20191231=he28a2e2_2
+  - setuptools==49.6.0=py38h578d9bd_3
+  - werkzeug==2.0.1=pyhd8ed1ab_0
+  - pip==21.1.2=pyhd8ed1ab_0
+  - lz4-c==1.9.3=h9c3ff4c_0
+  - requests-oauthlib==1.3.0=pyh9f0ad1d_0
+  - libopenblas==0.3.15=pthreads_h8fe5266_1
+  - cachetools==4.2.2=pyhd8ed1ab_0
+  - tar==1.34=ha1f6473_0
+  - _libgcc_mutex==0.1=conda_forge
+  - medaka==1.4.1=py38h130def0_0
+  - ncurses==6.2=h58526e2_4
+  - ca-certificates==2021.5.30=ha878542_0
+  - numpy==1.19.5=py38h18fd61f_1
+  - sqlite==3.35.5=h74cdb3f_0
+  - libgcc-ng==9.3.0=h2828fa1_19
+  - blinker==1.4=py_1
+  - bcftools==1.12=h45bccc9_1
+  - libstdcxx-ng==9.3.0=h6de172a_19
+  - samtools==1.12=h9aed4be_1
+  - decorator==5.0.9=pyhd8ed1ab_0
+  - grpcio==1.38.0=py38hdd6454d_0
+  - astunparse==1.6.3=pyhd8ed1ab_0
+  - ont-fast5-api==3.3.0=py_0
+  - absl-py==0.13.0=pyhd8ed1ab_0
+  - gsl==2.6=he838d99_2
+  - zlib==1.2.11=h516909a_1010
+  - biopython==1.79=py38h497a2fe_0
+  - pyasn1-modules==0.2.7=py_0
+  - _openmp_mutex==4.5=1_gnu
+  - pysam==0.16.0.1=py38hf7546f9_3
+  - python==3.8.10=h49503c6_1_cpython
+  - google-auth-oauthlib==0.4.1=py_2
+  - pyopenssl==20.0.1=pyhd8ed1ab_0
+  - libgomp==9.3.0=h2828fa1_19
+  - cffi==1.14.5=py38ha65f79e_0
+  - click==8.0.1=py38h578d9bd_0
+  - typing-extensions==3.10.0.0=hd8ed1ab_0
+  - pyu2f==0.1.5=pyhd8ed1ab_0
+  - google-auth==1.30.2=pyh6c4a22f_0
+  - racon==1.4.20=h9a82719_1
+  - zipp==3.4.1=pyhd8ed1ab_0
+  - rsa==4.7.2=pyh44b312d_0
+  - mappy==2.17=py38h390ddb8_3
+  - whatshap==1.1=py38h8c62d01_1
+  - parasail-python==1.2.4=py38h8e3bb3f_1
+  - pyjwt==2.1.0=pyhd8ed1ab_0
+  - readline==8.1=h46c0cb4_0
+  - sortedcontainers==2.4.0=pyhd8ed1ab_0
+  - scipy==1.6.3=py38h7b17777_0
+  - tensorboard-plugin-wit==1.8.0=pyh44b312d_0
+  - oauthlib==3.1.1=pyhd8ed1ab_0
+  - gast==0.3.3=py_0
+  - async-timeout==3.0.1=py_1000
+  - python-edlib==1.3.8.post2=py38h8c62d01_1
+  - libgfortran5==9.3.0=hff62375_19
+  - google-pasta==0.2.0=pyh8c360ce_0
+  - libdeflate==1.7=h7f98852_5
+  - zstd==1.5.0=ha95c52a_0
+  - tensorflow-estimator==2.5.0=pyh81a9013_1
+  - multidict==5.1.0=py38h497a2fe_1
+  - networkx==2.5=py_0
+  - tensorboard==2.5.0=pyhd8ed1ab_0
+  - htslib==1.12=h9093b5e_1
+  - xopen==1.1.0=py38h578d9bd_3
+  - tensorflow==2.2.0=mkl_py38h6d3daf0_0
+  - wrapt==1.12.1=py38h497a2fe_3
+  - perl==5.32.1=0_h7f98852_perl5
+  - certifi==2021.5.30=py38h578d9bd_0
+  - importlib-metadata==4.5.0=py38h578d9bd_0
+  - libcblas==3.9.0=9_openblas
+  - libblas==3.9.0=9_openblas
+  - markdown==3.3.4=pyhd8ed1ab_0
+  - opt_einsum==3.3.0=pyhd8ed1ab_1
+  - progressbar33==2.4=py_0
+  - intervaltree==3.0.2=py_0
+  - ld_impl_linux-64==2.35.1=hea4e1c9_2
+  - yaml==0.2.5=h516909a_0
+  - tensorflow-base==2.2.0=mkl_py38h5059a2d_0
+  - idna==2.10=pyh9f0ad1d_0
+  - libiconv==1.16=h516909a_0
+  - six==1.16.0=pyh6c4a22f_0
+  - wheel==0.36.2=pyhd3deb0d_0
+  - astor==0.8.1=pyh9f0ad1d_0
+  - liblapack==3.9.0=9_openblas
+  - libssh2==1.9.0=ha56f1ee_6
+  - pyfaidx==0.5.9.5=pyh3252c3a_0
+  - pyasn1==0.4.8=py_0
+  - h5py==2.10.0=nompi_py38h9915d05_106
+  - minimap2==2.20=h5bf99c6_0
+  - brotlipy==0.7.0=py38h497a2fe_1001
+  - libffi==3.3=h58526e2_2
+  - python-isal==0.10.0=py38h497a2fe_0
+  - libnghttp2==1.43.0=h812cca2_0
+  - packaging==20.9=pyh44b312d_0
+  - requests==2.25.1=pyhd3deb0d_0
+  - tensorboard-data-server==0.6.0=py38h2b97feb_0
+  - keras-preprocessing==1.1.2=pyhd8ed1ab_0
+  - python_abi==3.8=1_cp38
+  - krb5==1.19.1=hcc1bbae_0
+  - c-ares==1.17.1=h7f98852_1
+  - aiohttp==3.7.4.post0=py38h497a2fe_0
+  - libcurl==7.77.0=h2574ce0_0
+  - tk==8.6.10=h21135ba_1
+  - termcolor==1.1.0=py_2
+  - dataclasses==0.8=pyhc8e2a94_1
+  - libgfortran-ng==9.3.0=hff62375_19
+  - pyspoa==0.0.3=py38hc37a69a_2
+  - typing_extensions==3.10.0.0=pyha770c72_0
+  - k8==0.2.5=h9a82719_1
