--- a/env/nanopore-workflow_env.yml
+++ b/env/nanopore-workflow_env.yml
@@ -4,17 +4,19 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - nanoplot
+  - bcftools
   - sniffles
+  - survivor
+  - nanoplot=1.20.0
+  - longshot
+  - winnowmap
+  - cutesv
+  - nanofilt=2.8.0
+  - seaborn=0.10.0
+  - flye
+  - snakemake
+  - nanopolish
+  - whatshap
   - bedtools
   - svim
-  - longshot
-  - cutesv
-  - nanofilt
-  - bcftools
-  - survivor
-  - nanopolish
-  - snakemake
-  - whatshap
-  - winnowmap
-  - flye
+  
